--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,133 @@
+absl-py==2.1.0
+aiohttp==3.9.5
+aiosignal==1.3.1
 annotated-types==0.7.0
-anyio==4.6.2.post1
+anyio==4.4.0
+asttokens==2.4.1
+attrs==23.2.0
+beautifulsoup4==4.12.3
+biopython==1.84
+bleach==6.1.0
+certifi==2024.6.2
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-fastapi==0.115.2
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+dataclasses-json==0.6.7
+debugpy==1.8.2
+decorator==5.1.1
+distlib==0.3.8
+dominate==2.9.1
+et-xmlfile==1.1.0
+executing==2.0.1
+fastapi==0.114.1
+filelock==3.15.4
+fonttools==4.53.0
+frozenlist==1.4.1
+fsspec==2024.2.0
+graphviz==0.20.3
+greenlet==3.0.3
+grpcio==1.65.1
 h11==0.14.0
-idna==3.10
-joblib==1.4.2
-mangum==0.19.0
-numpy==2.1.2
-pandas==2.2.3
-pydantic==2.9.2
-pydantic_core==2.23.4
+idna==3.7
+imageio==2.34.2
+intel-openmp==2021.4.0
+ipykernel==6.29.4
+ipython==8.26.0
+jedi==0.19.1
+Jinja2==3.1.3
+jsonpatch==1.33
+jsonpointer==3.0.0
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+kaggle==1.6.17
+kiwisolver==1.4.5
+langchain==0.2.5
+langchain-community==0.2.5
+langchain-core==0.2.9
+langchain-text-splitters==0.2.1
+langsmith==0.1.81
+lazy_loader==0.4
+lightning-utilities==0.11.2
+lpips==0.1.4
+Markdown==3.6
+MarkupSafe==2.1.5
+marshmallow==3.21.3
+matplotlib==3.9.0
+matplotlib-inline==0.1.7
+mkl==2021.4.0
+mpmath==1.3.0
+multidict==6.0.5
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.2.1
+numpy==1.24.1
+openpyxl==3.1.5
+orjson==3.10.5
+packaging==24.1
+pandas==2.2.2
+parso==0.8.4
+pillow==10.2.0
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
+protobuf==4.25.4
+psutil==6.0.0
+pure-eval==0.2.2
+pydantic==2.7.4
+pydantic_core==2.18.4
+pygenomeviz==1.1.0
+Pygments==2.18.0
+pyparsing==3.1.2
+PySide6==6.7.2
+PySide6_Addons==6.7.2
+PySide6_Essentials==6.7.2
 python-dateutil==2.9.0.post0
-pytz==2024.2
-scikit-learn==1.5.2
-scipy==1.14.1
+python-slugify==8.0.4
+pytorch-fid==0.3.0
+pytorch-gan-metrics==0.5.4
+pytorch-image-generation-metrics==0.6.1
+pytz==2024.1
+pywin32==306
+PyYAML==6.0.1
+pyzmq==26.0.3
+requests==2.32.3
+scikit-image==0.24.0
+scipy==1.13.1
+shiboken6==6.7.2
 six==1.16.0
 sniffio==1.3.1
-starlette==0.40.0
-threadpoolctl==3.5.0
+soupsieve==2.6
+SQLAlchemy==2.0.31
+stack-data==0.6.3
+starlette==0.38.5
+stata_setup==0.1.3
+sympy==1.12
+tbb==2021.11.0
+tenacity==8.4.1
+tensorboard==2.17.0
+tensorboard-data-server==0.7.2
+text-unidecode==1.3
+tifffile==2024.7.24
+torch==2.3.1+cpu
+torchaudio==2.3.1+cpu
+torchmetrics==1.4.0.post0
+torchsummary==1.5.1
+torchvision==0.18.1+cpu
+torchviz==0.0.2
+tornado==6.4.1
+tqdm==4.66.4
+traitlets==5.14.3
+typing-inspect==0.9.0
 typing_extensions==4.12.2
-tzdata==2024.2
-uvicorn==0.32.0
+tzdata==2024.1
+urllib3==2.2.2
+uvicorn==0.30.6
+virtualenv==20.26.3
+visdom==0.2.4
+wcwidth==0.2.13
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==3.0.3
+yarl==1.9.4
